codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__status_surface__tests__persistent_status_and_messages.snap
---
source: tui/src/bottom_pane/chat_composer/status_surface_tests.rs
expression: "states.join(\"\\n---\\n\")"
---









› Ask Shortcut

  MODEL · ~/project · Context 20% used               Plan mode
  ? for shortcuts
---









› Ask Shortcut

  MODEL · ~/project · Context 20% used               Plan mode
  Copied selection
---









› Ask Shortcut

  MODEL · ~/project · Context 20% used               Plan mode
  Ctrl+X waiting for chord
---









› Continue the task

  MODEL · ~/project · Context 20% used               Plan mode
  tab to queue message
